# GHRepoLens

./: .env.example  .env.sample  .gitignore  CONTRIBUTING.md  LICENSE  README.md  _html.py  _js.py  analyzer.py  charts.py  colab_runner.py  config.ini.sample  config.py  console.py  html.py  lens.py  main.py  models.py  pyproject.toml  repo_analyzer.py  reporter.py  reports.py  requirements.txt  runner_analyzer.py  test_charts.py  test_extensions.py  test_html_background.py  test_loc_fix.py  test_theme.py  utilities.py  vercel_test.py  visualizer.py
.cursor/rules/: base-prompt.mdc
assets/: background.html
docs/: CHANGES.md  COLAB_USAGE.md  IFRAME_EMBEDDING.md  QUICK_START.md  SUMMARY.md  THEME_CONFIG.md  USAGE.md
examples/: colab_example.ipynb  colab_runner.py  config.ini.sample
reports/: visual_report.html
tests/: test_charts.py  test_extensions.py  test_html_background.py  test_loc_fix.py  test_theme.py
visualize/: __init__.py  charts.py  iframe_embed.py  repo_analyzer.py  visualizer.py
visualize/static/: __init__.py  _css.py  _html.py  _js.py
