[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghrepolens"
version = "0.1.3"
description = "Powerful GitHub repository analysis and visualization tool"
readme = "README.md"
authors = [
    {name = "Alaamer", email = "ahmedmuhmmed239@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["github", "repository", "analysis", "visualization", "dashboard", "metrics"]
requires-python = ">=3.8"
dependencies = [
    "PyGithub",
    "matplotlib",
    "seaborn",
    "plotly",
    "tqdm",
    "pandas",
    "wordcloud",
    "requests",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/alaamer12/GHRepoLens"
"Bug Tracker" = "https://github.com/alaamer12/GHRepoLens/issues"
"Documentation" = "https://github.com/alaamer12/GHRepoLens#readme"

[project.scripts]
ghrepolens = "ghrepolens.main:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 