[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghrepolens"
version = "0.6.0a0"
description = "Powerful GitHub repository analysis and visualization tool"
readme = "README.md"
authors = [
    {name = "Alaamer", email = "ahmedmuhmmed239@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["github", "repository", "analysis", "visualization", "dashboard", "metrics"]
requires-python = ">=3.8"
dependencies = [
    "PyGithub",
    "matplotlib",
    "seaborn",
    "plotly",
    "tqdm",
    "pandas",
    "wordcloud",
    "requests",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/alaamer12/GHRepoLens"
"Bug Tracker" = "https://github.com/alaamer12/GHRepoLens/issues"
"Documentation" = "https://github.com/alaamer12/GHRepoLens#readme"

[project.scripts]
lens = "ghrepolens.main:main"